edited: new logo was added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.port=8080
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://postgres:5432/postgres}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:vfr4vgy7}
 spring.jpa.database=postgresql
-vaadin.productionMode = true
+#vaadin.productionMode = true
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.hibernate.ddl-auto= update
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
